<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="@+id/TextText1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/TextText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/TextView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView1" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="17dp"
        android:text="@string/user_phone"
        app:layout_constraintBottom_toTopOf="@+id/TextText2"
        app:layout_constraintStart_toStartOf="@+id/TextText1"
        app:layout_constraintTop_toBottomOf="@+id/TextText1" />

    <EditText
        android:id="@+id/TextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/TextView3"
        app:layout_constraintStart_toStartOf="@+id/TextView2"
        app:layout_constraintTop_toBottomOf="@+id/TextView2" />

    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/user_email"
        app:layout_constraintBottom_toTopOf="@+id/TextText3"
        app:layout_constraintStart_toStartOf="@+id/TextText2"
        app:layout_constraintTop_toBottomOf="@+id/TextText2" />

    <EditText
        android:id="@+id/TextText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/TextView4"
        app:layout_constraintStart_toStartOf="@+id/TextView3"
        app:layout_constraintTop_toBottomOf="@+id/TextView3" />

    <TextView
        android:id="@+id/TextView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="12dp"
        android:text="@string/user_work_status"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup3"
        app:layout_constraintStart_toStartOf="@+id/radioGroup3"
        app:layout_constraintTop_toBottomOf="@+id/TextText3" />

    <CheckBox
        android:id="@+id/Box"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="570dp"
        android:layout_marginBottom="27dp"
        android:text="@string/user_agreement"
        app:layout_constraintBottom_toTopOf="@+id/Submit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Submit"
        android:layout_width="111dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        android:onClick="handleButtonClick"
        android:text="@string/user_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Box"
        app:layout_constraintTop_toBottomOf="@+id/Box" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="273dp"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/Box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView4">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_work_status1" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_work_status2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_work_status3" />
    </RadioGroup>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/menu_main"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.ActionBar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_main"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>